--- a/jupyter/instagram.ipynb
+++ b/jupyter/instagram.ipynb
@@ -2,32 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'modules'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mg:\\workspace_datascience\\workspace_datascience\\jupyter\\instagram.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/g%3A/workspace_datascience/workspace_datascience/jupyter/instagram.ipynb#ch0000000?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mselenium\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mwebdriver\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcommon\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mby\u001b[39;00m \u001b[39mimport\u001b[39;00m By\n\u001b[0;32m      <a href='vscode-notebook-cell:/g%3A/workspace_datascience/workspace_datascience/jupyter/instagram.ipynb#ch0000000?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mselenium\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mwebdriver\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msupport\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mwait\u001b[39;00m \u001b[39mimport\u001b[39;00m WebDriverWait\n\u001b[1;32m----> <a href='vscode-notebook-cell:/g%3A/workspace_datascience/workspace_datascience/jupyter/instagram.ipynb#ch0000000?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodules\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpasswords\u001b[39;00m \u001b[39mimport\u001b[39;00m InstagramPassword\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'modules'"
+     ]
+    }
+   ],
    "source": [
     "#imports here\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.support.wait import WebDriverWait"
+    "from selenium.webdriver.support.wait import WebDriverWait\n",
+    "from passwords import InstagramPassword"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_3540\\169082066.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome('G:\\chrom\\chromedriver.exe')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#specify the path to chromedriver.exe (download and save on your computer)\n",
     "driver = webdriver.Chrome('G:\\chrom\\chromedriver.exe')\n",
@@ -42,10 +46,11 @@
     "\n",
     "\n",
     "#enter username and password\n",
+    "Instagram = InstagramPassword()\n",
     "username.clear()\n",
-    "username.send_keys(\"+48880441893\")\n",
+    "username.send_keys( Instagram.user )\n",
     "password.clear()\n",
-    "password.send_keys(\"Instagram0-\")\n",
+    "password.send_keys( Instagram.password )\n",
     "\n",
     "#target the login button and click it\n",
     "button = WebDriverWait(driver, 2).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \"button[type='submit']\"))).click()\n",
@@ -56,22 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TimeoutException",
-     "evalue": "Message: \nStacktrace:\nBacktrace:\n\tOrdinal0 [0x00B47413+2389011]\n\tOrdinal0 [0x00AD9F61+1941345]\n\tOrdinal0 [0x009CC658+837208]\n\tOrdinal0 [0x009F91DD+1020381]\n\tOrdinal0 [0x009F949B+1021083]\n\tOrdinal0 [0x00A26032+1204274]\n\tOrdinal0 [0x00A14194+1130900]\n\tOrdinal0 [0x00A24302+1196802]\n\tOrdinal0 [0x00A13F66+1130342]\n\tOrdinal0 [0x009EE546+976198]\n\tOrdinal0 [0x009EF456+980054]\n\tGetHandleVerifier [0x00CF9632+1727522]\n\tGetHandleVerifier [0x00DABA4D+2457661]\n\tGetHandleVerifier [0x00BDEB81+569713]\n\tGetHandleVerifier [0x00BDDD76+566118]\n\tOrdinal0 [0x00AE0B2B+1968939]\n\tOrdinal0 [0x00AE5988+1989000]\n\tOrdinal0 [0x00AE5A75+1989237]\n\tOrdinal0 [0x00AEECB1+2026673]\n\tBaseThreadInitThunk [0x7566FA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77367A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77367A4E+238]\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32mg:\\workspace_datascience\\workspace_datascience\\jupyter\\instagram.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/g%3A/workspace_datascience/workspace_datascience/jupyter/instagram.ipynb#ch0000002?line=0'>1</a>\u001b[0m \u001b[39m#nadle NOT NOW\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/g%3A/workspace_datascience/workspace_datascience/jupyter/instagram.ipynb#ch0000002?line=1'>2</a>\u001b[0m not_now \u001b[39m=\u001b[39m WebDriverWait(driver, \u001b[39m10\u001b[39m)\u001b[39m.\u001b[39muntil(EC\u001b[39m.\u001b[39melement_to_be_clickable((By\u001b[39m.\u001b[39mXPATH, \u001b[39m'\u001b[39m\u001b[39m//button[contains(text(), \u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNie teraz\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m)]\u001b[39m\u001b[39m'\u001b[39m)))\u001b[39m.\u001b[39mclick()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/g%3A/workspace_datascience/workspace_datascience/jupyter/instagram.ipynb#ch0000002?line=2'>3</a>\u001b[0m not_now2 \u001b[39m=\u001b[39m WebDriverWait(driver, \u001b[39m10\u001b[39;49m)\u001b[39m.\u001b[39;49muntil(EC\u001b[39m.\u001b[39;49melement_to_be_clickable((By\u001b[39m.\u001b[39;49mXPATH, \u001b[39m'\u001b[39;49m\u001b[39m//button[contains(text(), \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mNie teraz\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m)]\u001b[39;49m\u001b[39m'\u001b[39;49m)))\u001b[39m.\u001b[39mclick()\n",
-      "File \u001b[1;32mc:\\Users\\wooch\\anaconda3\\envs\\workspace_datascience\\lib\\site-packages\\selenium\\webdriver\\support\\wait.py:89\u001b[0m, in \u001b[0;36mWebDriverWait.until\u001b[1;34m(self, method, message)\u001b[0m\n\u001b[0;32m     <a href='file:///c%3A/Users/wooch/anaconda3/envs/workspace_datascience/lib/site-packages/selenium/webdriver/support/wait.py?line=86'>87</a>\u001b[0m     \u001b[39mif\u001b[39;00m time\u001b[39m.\u001b[39mmonotonic() \u001b[39m>\u001b[39m end_time:\n\u001b[0;32m     <a href='file:///c%3A/Users/wooch/anaconda3/envs/workspace_datascience/lib/site-packages/selenium/webdriver/support/wait.py?line=87'>88</a>\u001b[0m         \u001b[39mbreak\u001b[39;00m\n\u001b[1;32m---> <a href='file:///c%3A/Users/wooch/anaconda3/envs/workspace_datascience/lib/site-packages/selenium/webdriver/support/wait.py?line=88'>89</a>\u001b[0m \u001b[39mraise\u001b[39;00m TimeoutException(message, screen, stacktrace)\n",
-      "\u001b[1;31mTimeoutException\u001b[0m: Message: \nStacktrace:\nBacktrace:\n\tOrdinal0 [0x00B47413+2389011]\n\tOrdinal0 [0x00AD9F61+1941345]\n\tOrdinal0 [0x009CC658+837208]\n\tOrdinal0 [0x009F91DD+1020381]\n\tOrdinal0 [0x009F949B+1021083]\n\tOrdinal0 [0x00A26032+1204274]\n\tOrdinal0 [0x00A14194+1130900]\n\tOrdinal0 [0x00A24302+1196802]\n\tOrdinal0 [0x00A13F66+1130342]\n\tOrdinal0 [0x009EE546+976198]\n\tOrdinal0 [0x009EF456+980054]\n\tGetHandleVerifier [0x00CF9632+1727522]\n\tGetHandleVerifier [0x00DABA4D+2457661]\n\tGetHandleVerifier [0x00BDEB81+569713]\n\tGetHandleVerifier [0x00BDDD76+566118]\n\tOrdinal0 [0x00AE0B2B+1968939]\n\tOrdinal0 [0x00AE5988+1989000]\n\tOrdinal0 [0x00AE5A75+1989237]\n\tOrdinal0 [0x00AEECB1+2026673]\n\tBaseThreadInitThunk [0x7566FA29+25]\n\tRtlGetAppContainerNamedObjectPath [0x77367A7E+286]\n\tRtlGetAppContainerNamedObjectPath [0x77367A4E+238]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#nadle NOT NOW\n",
     "not_now = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.XPATH, '//button[contains(text(), \"Nie teraz\")]'))).click()\n",
