--- a/jupyter/instagram.ipynb
+++ b/jupyter/instagram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_5988\\3564667161.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_7512\\3564667161.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome('G:\\chrom\\chromedriver.exe')\n"
      ]
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,27 +69,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3503297947.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [27]\u001b[1;36m\u001b[0m\n\u001b[1;33m    //*[@id=\"react-root\"]/section/nav/div[2]/div/div/div[2]/input\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_7512\\3842967807.py:25: DeprecationWarning: find_elements_by_tag_name is deprecated. Please use find_elements(by=By.TAG_NAME, value=name) instead\n",
+      "  images = driver.find_elements_by_tag_name('img')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of scraped images:  49\n"
      ]
     }
    ],
    "source": [
     "import time\n",
-    "//*[@id=\"react-root\"]/section/nav/div[2]/div/div/div[2]/input\n",
+    "\n",
     "#target the search input field\n",
-    "searchbox = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.XPATH, '//*[@id=\"react-root\"]')))\n",
+    "searchbox = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.XPATH, \"//input[@placeholder='Szukaj']\")))\n",
     "searchbox.clear()\n",
     "\n",
     "#search for the hashtag cat\n",
-    "keyword = \"#cat\"\n",
+    "keyword = \"#banskastiavnica\"\n",
     "searchbox.send_keys(keyword)\n",
     " \n",
     "# Wait for 5 seconds\n",
@@ -100,8 +107,11 @@
     "time.sleep(5)\n",
     "\n",
     "#scroll down to scrape more images\n",
-    "driver.execute_script(\"window.scrollTo(0, 4000);\")\n",
-    "\n",
+    "for i in range(5):\n",
+    "    driver.execute_script(\"window.scrollTo(0, 40000);\")\n",
+    "    time.sleep(2)\n",
+    "    driver.execute_script(\"window.scrollTo(0, 400000);\")\n",
+    "    time.sleep(2)\n",
     "#target all images on the page\n",
     "images = driver.find_elements_by_tag_name('img')\n",
     "images = [image.get_attribute('src') for image in images]\n",
@@ -112,9 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'g:\\\\workspace_datascience\\\\workspace_datascience\\\\jupyter\\\\banskastiavnicas'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "import wget\n",
@@ -130,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
