--- a/jupyter/bs4-cities.ipynb
+++ b/jupyter/bs4-cities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        " ...]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1026,11 @@
     "page = urllib.request.urlopen( url )\n",
     "soup = bs( page, 'html.parser' )\n",
     "\n",
-    "soup.select('a[href^=\"/wiki/\"]')"
+    "links = soup.select('a[href^=\"/wiki/\"]')\n",
+    "\n",
+    "url = [ href for href in links ]\n",
+    "result = re.findall( \"/wiki/\\w+\" , str(url) )\n",
+    "result"
    ]
   }
  ],
