first regex works

--- a/jupyter/bs4-cities.ipynb
+++ b/jupyter/bs4-cities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = [ href for href in links ]\n",
-    "result = re.findall( \"/wiki/[a-z || A-Z || \\s || %C3%B3 || %C4%85 || %C4%87 || %C4%99 || %C5%82 || %C5%84 || %C3%B3 || %C5%9B || %C5%BA || %C5%BC || %C4%84 || %C4%86 || %C4%98 || %C5%81 || %C5%83 || %C3%93 || %C5%9A || %C5%B9 ||%C5%BB]*.\\\" title=\\\"\\w+\" , str(url) ) #  /wiki/[A-Za-zżźćńółęąśŻŹĆĄŚĘŁÓŃ]*.\\\" title=\\\"\\w+\n",
-    "result"
+    "result = re.findall( \"/wiki/[a-z || A-Z || _ || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+    "                        || %C5%82 || %C5%84 || %C3%B3 || %C5%9B || %C5%BA || %C5%BC || \\\n",
+    "                        %C4%84 || %C4%86 || %C4%98 || %C5%81 || %C5%83 || %C3%93 || %C5%9A\\ || %C5%B9 ||%C5%BB]*.\\\" title=\\\"[A-Za-zżźćńółęąśŻŹĆĄŚĘŁÓŃ || \\s]*\" , \n",
+    "                        str(url) ) \n",
+    "del result[1042:]\n",
+    "del result[0:163] \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
