reg mistake fixed

--- a/jupyter/bs4-cities.ipynb
+++ b/jupyter/bs4-cities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 11\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 18\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 23\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 28\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 33\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 43\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 53\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 63\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 97\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 107\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 117\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 127\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 137\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 147\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 157\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 191\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 201\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 211\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 221\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 231\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 241\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 252\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 262\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_13548\\1375597590.py:2: FutureWarning: Possible set union at position 308\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n"
+     ]
+    }
+   ],
    "source": [
     "url = [ href for href in links ]\n",
-    "result = re.findall( \"/wiki/[a-z || A-Z || _ || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+    "result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
     "                        || %C5%82 || %C5%84 || %C3%B3 || %C5%9B || %C5%BA || %C5%BC || \\\n",
     "                        %C4%84 || %C4%86 || %C4%98 || %C5%81 || %C5%83 || %C3%93 || %C5%9A\\ || %C5%B9 ||%C5%BB]*.\\\" title=\\\"[A-Za-zżźćńółęąśŻŹĆĄŚĘŁÓŃ || \\s]*\" , \n",
     "                        str(url) ) \n",
@@ -36,10 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "email = []\n",
+    "for adress in result:\n",
+    "    fullAdress = \"\"\n",
+    "\n",
     "df = pd.DataFrame( result )\n",
     "df.to_csv(\"cities.csv\")"
    ]
