--- a/jupyter/cities_get_info.ipynb
+++ b/jupyter/cities_get_info.ipynb
@@ -2,16 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "[]\n",
-      "[]\n",
       "[<th><a href=\"/wiki/Pa%C5%84stwo\" title=\"Państwo\">Państwo</a>\n",
       "</th>]\n",
       "[<th><a href=\"/wiki/Podzia%C5%82_administracyjny_Polski\" title=\"Podział administracyjny Polski\">Województwo</a>\n",
@@ -23,7 +20,22 @@
       "[<th>Data założenia\n",
       "</th>]\n",
       "[<th><a href=\"/wiki/Prawa_miejskie\" title=\"Prawa miejskie\">Prawa miejskie</a>\n",
-      "</th>]\n"
+      "</th>]\n",
+      "[<th><a href=\"/wiki/Burmistrz\" title=\"Burmistrz\">Burmistrz</a>\n",
+      "</th>]\n",
+      "[<th><a href=\"/wiki/Pole_powierzchni\" title=\"Pole powierzchni\">Powierzchnia</a>\n",
+      "</th>]\n",
+      "[<th>Wysokość\n",
+      "</th>]\n",
+      "[<th>Populacja <small>(31.12.2019)</small><br/>• liczba ludności<br/>• gęstość\n",
+      "</th>]\n",
+      "[<th><a href=\"/wiki/Plan_numeracji_krajowej\" title=\"Plan numeracji krajowej\">Strefa numeracyjna</a>\n",
+      "</th>]\n",
+      "[<th><a href=\"/wiki/Kod_pocztowy\" title=\"Kod pocztowy\">Kod pocztowy</a>\n",
+      "</th>]\n",
+      "[<th><a class=\"extiw\" href=\"https://pl.wikisource.org/wiki/Polskie_tablice_rejestracyjne\" title=\"s:Polskie tablice rejestracyjne\">Tablice rejestracyjne</a>\n",
+      "</th>]\n",
+      "[]\n"
      ]
     }
    ],
@@ -47,9 +59,10 @@
     "    soup = bs( dfs.text ,'html.parser' )\n",
     "    \n",
     "    infobox = soup.find( 'table', {'class':'infobox'})\n",
-    "    for row in infobox.find_all( 'tr' )[3:12]:\n",
+    "    for row in infobox.find_all( 'tr' )[6:20]:\n",
     "        dataType = row.find_all( 'th' )\n",
-    "        print( dataType )\n"
+    "        print( dataType)\n",
+    "        \n"
    ]
   }
  ],
