--- a/jupyter/bs4-cities.ipynb
+++ b/jupyter/bs4-cities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 11\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 18\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 23\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 28\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 33\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 43\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 53\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 63\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 97\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 107\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 117\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 127\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 137\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 147\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 157\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 191\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 201\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 211\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 221\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 231\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 241\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 252\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 262\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_6132\\1764071256.py:2: FutureWarning: Possible set union at position 308\n",
+      "  result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n"
+     ]
+    }
+   ],
    "source": [
     "url = [ href for href in links ]\n",
     "result = re.findall( \"/wiki/[a-z || A-Z || _ || ( || ) || %C3%B3 || %C4%85 || %C4%87 || %C4%99 \\\n",
@@ -36,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
