--- a/jupyter/cities_get_info.ipynb
+++ b/jupyter/cities_get_info.ipynb
@@ -2,40 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<th><a href=\"/wiki/Pa%C5%84stwo\" title=\"Państwo\">Państwo</a>\n",
-      "</th>]\n",
-      "[<th><a href=\"/wiki/Podzia%C5%82_administracyjny_Polski\" title=\"Podział administracyjny Polski\">Województwo</a>\n",
-      "</th>]\n",
-      "[<th><a href=\"/wiki/Powiat_(Polska)\" title=\"Powiat (Polska)\">Powiat</a>\n",
-      "</th>]\n",
-      "[<th><a href=\"/wiki/Aglomeracja\" title=\"Aglomeracja\">Aglomeracja</a>\n",
-      "</th>]\n",
-      "[<th>Data założenia\n",
-      "</th>]\n",
-      "[<th><a href=\"/wiki/Prawa_miejskie\" title=\"Prawa miejskie\">Prawa miejskie</a>\n",
-      "</th>]\n",
-      "[<th><a href=\"/wiki/Burmistrz\" title=\"Burmistrz\">Burmistrz</a>\n",
-      "</th>]\n",
-      "[<th><a href=\"/wiki/Pole_powierzchni\" title=\"Pole powierzchni\">Powierzchnia</a>\n",
-      "</th>]\n",
-      "[<th>Wysokość\n",
-      "</th>]\n",
-      "[<th>Populacja <small>(31.12.2019)</small><br/>• liczba ludności<br/>• gęstość\n",
-      "</th>]\n",
-      "[<th><a href=\"/wiki/Plan_numeracji_krajowej\" title=\"Plan numeracji krajowej\">Strefa numeracyjna</a>\n",
-      "</th>]\n",
-      "[<th><a href=\"/wiki/Kod_pocztowy\" title=\"Kod pocztowy\">Kod pocztowy</a>\n",
-      "</th>]\n",
-      "[<th><a class=\"extiw\" href=\"https://pl.wikisource.org/wiki/Polskie_tablice_rejestracyjne\" title=\"s:Polskie tablice rejestracyjne\">Tablice rejestracyjne</a>\n",
-      "</th>]\n",
-      "[]\n"
+      "Empty DataFrame\n",
+      "Columns: [Państwo, Województwo, Powiat, Aglomeracja, Data Założena, Prawa miejskie, Burmistrz, Pole powierzchni, Wysokość, Liczba ludności i Gęstość, Strefa numeracyjna, Kod pocztowy, Tablice rejestracyjne]\n",
+      "Index: []\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\wooch\\AppData\\Local\\Temp\\ipykernel_11284\\3399082491.py:36: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  CitiesData.append( rowDataSeries, ignore_index=True)\n"
      ]
     }
    ],
@@ -43,6 +27,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup as bs\n",
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "\n",
     "df = pd.read_csv (r'cities.csv')\n",
@@ -58,11 +43,26 @@
     "    dfs = requests.get( city )\n",
     "    soup = bs( dfs.text ,'html.parser' )\n",
     "    \n",
+    "    \n",
+    "    columnNames = [\"Państwo\",\"Województwo\", \"Powiat\", \"Aglomeracja\", \n",
+    "                   \"Data Założena\", \"Prawa miejskie\", \"Burmistrz\", \"Pole powierzchni\",\n",
+    "                   \"Wysokość\", \"Liczba ludności i Gęstość\",\"Strefa numeracyjna\", \"Kod pocztowy\", \"Tablice rejestracyjne\"\n",
+    "                    ]\n",
+    "    CitiesData = pd.DataFrame( columns=columnNames )\n",
     "    infobox = soup.find( 'table', {'class':'infobox'})\n",
-    "    for row in infobox.find_all( 'tr' )[6:20]:\n",
-    "        dataType = row.find_all( 'th' )\n",
-    "        print( dataType)\n",
-    "        \n"
+    "    \n",
+    "    infobox_body = infobox.find('tbody')\n",
+    "    rows = infobox_body.find_all( 'tr')\n",
+    "    rowData = []\n",
+    "    for row in rows:\n",
+    "        cols = row.find_all('td')\n",
+    "        cols = [ele.text.strip() for ele in cols]\n",
+    "        rowData.append(cols)\n",
+    "    rowDataSeries = pd.Series( rowData[6:-13], index=columnNames)\n",
+    "    CitiesData.append( rowDataSeries, ignore_index=True)\n",
+    "    \n",
+    "    print( CitiesData )                     \n",
+    "     \n"
    ]
   }
  ],
